[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-oracle"
version = "0.1.0"
description = "OCI-oriented facilities for LangGraph, starting with an Oracle ADB checkpointer."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "L. Saetta" }
]
keywords = ["langgraph", "oracle", "oci", "adb", "checkpoint", "checkpointer"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "langgraph",
  "oracledb"
]

[project.urls]
Homepage = "https://github.com/luigisaetta/langgraph-oracle"
Documentation = "https://luigisaetta.github.io/langgraph-oracle/"
Repository = "https://github.com/luigisaetta/langgraph-oracle"
Issues = "https://github.com/luigisaetta/langgraph-oracle/issues"
Changelog = "https://github.com/luigisaetta/langgraph-oracle/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "black",
  "pylint",
  "pytest",
  "pytest-cov"
]
docs = [
  "mkdocs",
  "mkdocs-material"
]
release = [
  "build",
  "twine"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config"
]
markers = [
  "integration: marks tests that require external services or credentials",
  "oracle_adb: marks tests that require Oracle Autonomous Database"
]

[tool.pylint.main]
py-version = "3.11"
source-roots = ["src", "tests"]

[tool.pylint.format]
max-line-length = 88
